# CACIC-FloydWarshallLib

./: .gitignore  CMakeLists.txt  CheckCorrect.py  ExitCodes.txt  OldCompile.bat  README.md  Static  TestGen.py  check_csv_matrix.py  compile.bat  compile2.bat  compile_linux.sh  linux.sh  main.c  main_with_sequential.c  makefile  metricas.sh  metricas.txt  metricas1.txt  test.csv  test.json  test.sh
CSV/: CSV_Utils.h  CSV_createMatrix.c
CSVMatrixCreator/: CSV_createMatrix.c  CSV_createMatrix.h
CSV_Utils/: CSV_Utils.c  CSV_Utils.h
DataType/: dataType.c  dataType.h
Examples/: 1000x1000.csv  1024.csv  1024.json  1024v2.csv  20x20.csv  3.csv  3.json  32x32.csv  33x33.csv  380x380.csv  4v2.csv  4v3.csv  4v4.csv  5.csv  500x500.csv  512.csv  513.csv  600.csv  6x6.csv  700.csv  8.csv  800.csv  8v2.csv  8x8.csv  Example_CSV_1024_int.csv  Example_CSV_150_int.csv  Example_CSV_15_double.csv  Example_CSV_200_float.csv  Example_CSV_380_int.csv  Example_CSV_5_int.csv  Example_JSON_150_int.json  Example_JSON_15_double.json  f15.csv  f3.csv  f4.csv  i4.csv  i5.csv
FileManager/: file_handler.h
FileReader/: csv.c  file.c  file.h  json.c
File_Manager/: file_handler.c
Floyd-Warshall/: FW_Lib.h  FW_Lib_Functions.c  FW_Lib_Functions.h  floyd_version_7_8.c
Floyd_Warshall_Lib/: FW_Lib_Functions.c  FW_compute.h  FW_compute_double.c  FW_compute_float.c  FW_compute_int.c  floyd_version_7_8.c
Generator/: ExampleGenerator.c  compile.bat  output.csv  output.json  r
JSON/: JSON_CreateMatrix.c  JSON_Functions.c  JSON_Utils.h
Matrix/: matrix.c  matrix.h
apps/: FW_app.c  example_app.c  (+1 more)
(+89 files in other folders)
